terraform/modules/vpc/elastic-ip2-nat-gateway.tf
# Creating an Elastic IP for the NAT Gateway!
resource "aws_eip" "nat-gateway2-eip" {
  depends_on = [
    aws_route_table_association.internet-gateway-route-association
  ]
  tags = {
    Name = "nat-gateway2-eip.${var.application}.${var.environment}.coda-payment-test-task"
  }
  vpc = true
}
